[package]
name = "triviality"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
itertools = "0.12.1"
lazy_static = "1.4.0"
semver = { version = "1.0.22", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"
tree-sitter = "0.20"
tree-sitter-rust = "0.20.4"
walkdir = "2.5.0"

[build-dependencies]
cc = "1.0.90"
